# dagster-maxima-xrd

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml  workspace.yaml
.github/workflows/: ci.yaml
docs/source/: configuration.rst  dagster_runtime.rst  discovery_backend.rst  getting_started.rst  troubleshooting.rst
docs/source/api/: runtime_utilities.rst
src/MaximaDagster/: assets.py  definitions.py  io_managers.py  resources.py  sensors.py
src/MaximaDagster/modules/: __init__.py  azimuthal_integrator.py  calibrate.py  lattice_parameters.py
src/MaximaDagster/utils/: discovery.py  poni_manager.py  results_publisher.py
src/maxima_dagster/: assets.py  contracts.py  definitions.py  io_managers.py  partition_mapping.py  resources.py  sensors.py
src/maxima_dagster/modules/: __init__.py
tests/: conftest.py  test_active_poni_coordination.py  test_azimuthal_integrator.py  test_calibrate.py  test_discovery_datafiles.py  test_geometry_loader.py  test_partition_mapping.py  test_poni_manager.py  test_resources.py  test_results_publisher.py  test_sensor_cursor_helpers.py  test_sensor_job_wiring.py  test_sensor_partition_backend.py  test_xrd_pipeline_metadata.py
