[project]
name = "maxima_dagster"
requires-python = ">=3.11,<3.15"
version = "2026.6.1"
dependencies = [
    "dagster",
    "numpy==2.4.1",
    "pandas>=2.2,<3",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "transformers==4.57.6",
    "fabio==2025.10.0",
    "girder-client",
    "h5py>=3.11,<4",
    "pyFAI==2025.12.1",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "matplotlib==3.10.8",
    "PyMca5==5.9.5",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest",
    "pytest-cov",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "maxima_dagster"
registry_modules = [
    "maxima_dagster.components.*",
]
